--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 
     <!--bootstrap icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+    <style>
+            @media screen and (max-width: 768px){
+                #sign-up{
+                    margin-top:15px;
+                }
+            }
+    </style>
 </head>
 <body>
+
+    <!--header-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
 
@@ -50,7 +60,7 @@
               <input class="form-control me-2 text-white bg-dark" type="search" placeholder="Search..." aria-label="Search">
               <button class="btn btn-outline-success text-white border-white" type="submit">Login</button>
             </form>
-            <button class="btn btn-outline-success border-white text-dark bg-warning mx-2" type="submit">Sign-up</button>
+            <button class="btn btn-outline-success border-white text-dark bg-warning mx-2" type="submit" id="sign-up">Sign-up</button>
           </div>
         </div>
       </nav>
