--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 #sign-up{
                     margin-top:15px;
                 }
+
+                #search-box{
+                    width:240px;
+                }
             }
     </style>
 </head>
@@ -126,7 +130,7 @@
             <div class="row mt-5 justify-content-between" style="background-color:#20282b">
                 <div class="col-sm-12 col-md-5 mt-4 mb-4">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search-box">
                         <i class="bi bi-search text-white pt-2"></i>
                     </form>
                 </div>
