--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 #search-box{
                     width:240px;
                 }
+
+                #card-min{
+                   padding-left:120px !important;
+                }
+
+                
             }
     </style>
 </head>
@@ -86,7 +92,7 @@
                         <button type="button" class="btn btn-outline-dark">View</button>
                         <button type="button" class="btn btn-outline-dark">Edit</button>
                      </div>
-                     <div class="d-flex d-inline-flex" style="padding-left:210px">9 mins</div>
+                     <div class="d-flex d-inline-flex" style="padding-left:210px" id="card-min">9 mins</div>
                 </div>
                     
                 </div>
@@ -103,7 +109,7 @@
                         <button type="button" class="btn btn-outline-dark">View</button>
                         <button type="button" class="btn btn-outline-dark">Edit</button>
                      </div>
-                     <div class="d-flex d-inline-flex" style="padding-left:210px">9 mins</div>
+                     <div class="d-flex d-inline-flex" style="padding-left:210px" id="card-min">9 mins</div>
                     </div>
                 </div>
             </div>
@@ -119,7 +125,7 @@
                         <button type="button" class="btn btn-outline-dark">View</button>
                         <button type="button" class="btn btn-outline-dark">Edit</button>
                      </div>
-                     <div class="d-flex d-inline-flex" style="padding-left:210px">9 mins</div>
+                     <div class="d-flex d-inline-flex" style="padding-left:210px" id="card-min">9 mins</div>
                     </div>
                 </div>
             </div>
@@ -152,7 +158,6 @@
                 </div>
             </div>
         </div>
-
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
